@@ -7,6 +7,9 @@ import gc
 import bisect
 
 
+NUMERIC_REGEXP = re.compile(r"\d+|\D+")  # Split into numerics and characters
+
+
 def alphanumeric_sort(filenames):
     """Do an in-place alphanumeric sort of the strings in <filenames>,
     such that for an example "1.jpg", "2.jpg", "10.jpg" is a sorted
@@ -18,9 +21,27 @@ def alphanumeric_sort(filenames):
 
         return s.lower()
 
-    rec = re.compile("\d+|\D+")
-    filenames.sort(key=lambda s: map(_format_substring, rec.findall(s)))
+    filenames.sort(key=lambda s: map(_format_substring, NUMERIC_REGEXP.findall(s)))
 
+def alphanumeric_compare(s1, s2):
+    """ Compares two strings by their natural order (i.e. 1 before 10)
+    and returns a result comparable to the cmp function.
+    @return: 0 if identical, -1 if s1 < s2, +1 if s1 > s2. """
+    if s1 is None:
+        return 1
+    elif s2 is None:
+        return -1
+
+    stringparts1 = NUMERIC_REGEXP.findall(s1.lower())
+    stringparts2 = NUMERIC_REGEXP.findall(s2.lower())
+    for i, part in enumerate(stringparts1):
+        if part.isdigit():
+            stringparts1[i] = int(part)
+    for i, part in enumerate(stringparts2):
+        if part.isdigit():
+            stringparts2[i] = int(part)
+
+    return cmp(stringparts1, stringparts2)
 
 def bin_search(lst, value):
     """ Binary search for sorted list C{lst}, looking for C{value}.
